force-app/main/default/objects/Account/fields/account6QA6sense__c.field-meta.xml
<CustomField>
    <fullName>account6QA6sense__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The 6QA status of the account for the product.</description>
    <label>6sense 6QA</label>
    <type>Checkbox</type>
</CustomField>