force-app/main/default/objects/Account/fields/account6QAAgeInDays6sense__c.field-meta.xml
<CustomField>
    <fullName>account6QAAgeInDays6sense__c</fullName>
    <description>Days the account has been in 6QA status.</description>
    <label>6sense Account 6QA Age in Days</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>