force-app/main/default/objects/Account/fields/account6QAEndDate6sense__c.field-meta.xml
<CustomField>
    <fullName>account6QAEndDate6sense__c</fullName>
    <description>The date the account was disqualified from 6QA status (YYYY-MM-DD)</description>
    <label>6sense Account 6QA End Date</label>
    <type>Date</type>
</CustomField>