force-app/main/default/objects/Account/fields/Account_Amount_ARR__c.field-meta.xml
<CustomField>
    <fullName>Account_Amount_ARR__c</fullName>
    <description>SFDC 5169</description>
    <formula>MRRCalc__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Amount ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>