force-app/main/default/objects/Account/fields/Account_Claim_Approval_Date_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Account_Claim_Approval_Date_Time_Stamp__c</fullName>
    <description>SFDC 5309 - Stamps when the Approval Process gets Approved. Triggered by Account Claim Process and updated in Account Before Save</description>
    <label>Account Claim Approval Date/Time Stamp</label>
    <type>DateTime</type>
</CustomField>