force-app/main/default/objects/Account/fields/Account_Claim_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Claim_Approval_Status__c</fullName>
    <description>SFDC-243 Updated by Account Claim approval process/flow. Used to trigger automation after approval process is completed</description>
    <label>Account Claim Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Active</fullName>
                <default>true</default>
                <label>Not Active</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>