force-app/main/default/objects/Account/fields/Account_Claim_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Account_Claim_Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SFDC-243 Populated by Account Claim flow. Used to indicate user that will be assigned as owner if Account Claim is approved</description>
    <label>Account Claim Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accountshuv0</relationshipName>
    <type>Lookup</type>
</CustomField>