force-app/main/default/objects/Account/fields/Account_Dispute_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Account_Dispute_Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SFDC 5921 - Referenced in Approval Process Account Claim Dispute Process</description>
    <label>Account Dispute Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accountsuh3Z</relationshipName>
    <type>Lookup</type>
</CustomField>