force-app/main/default/objects/Account/fields/Account_Priority__c.field-meta.xml
<CustomField>
    <fullName>Account_Priority__c</fullName>
    <description>SFDC-5031. Account Executives should utilize this to rank the priority of their accounts.</description>
    <inlineHelpText>Account Executives should utilize this to rank the priority of their accounts.</inlineHelpText>
    <label>Account Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>