force-app/main/default/objects/Account/fields/Account_Research_Notes__c.field-meta.xml
<CustomField>
    <fullName>Account_Research_Notes__c</fullName>
    <description>SFDC 5209 Sales Account Notes</description>
    <inlineHelpText>Sales Account Notes</inlineHelpText>
    <label>Account Research Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>