force-app/main/default/objects/Account/fields/Account_Round_Robin_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Account_Round_Robin_Bucket__c</fullName>
    <description>Determines which bucket this Account routed to at the time it was assigned via Leandata Routing.</description>
    <inlineHelpText>Determines which bucket this Account routed to at the time it was assigned via Leandata Routing.</inlineHelpText>
    <label>Account Round Robin Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mid Market</fullName>
            </value>
            <value>
                <fullName>U SMB</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>Customer Growth Place Holder</fullName>
            </value>
            <value>
                <fullName>AMER CG ENTR</fullName>
            </value>
            <value>
                <fullName>AMER CG MM</fullName>
            </value>
            <value>
                <fullName>AMER CG SMB</fullName>
            </value>
            <value>
                <fullName>EMEA CG ENTR</fullName>
            </value>
            <value>
                <fullName>EMEA CG MM</fullName>
            </value>
            <value>
                <fullName>EMEA CG SMB</fullName>
            </value>
            <value>
                <fullName>APAC CG ENTR</fullName>
            </value>
            <value>
                <fullName>APAC CG MM</fullName>
            </value>
            <value>
                <fullName>APAC CG SMB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>