force-app/main/default/objects/Account/fields/Account_Type_del__c.field-meta.xml
<CustomField>
    <fullName>Account_Type_del__c</fullName>
    <description>Type of account being managed by CSMs</description>
    <inlineHelpText>Type of account being managed by CSMs</inlineHelpText>
    <label>CS Account Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
                <label>Single Account</label>
            </value>
            <value>
                <fullName>Parent Account</fullName>
            </value>
            <value>
                <fullName>Child Account</fullName>
            </value>
            <value>
                <fullName>Brand Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>