force-app/main/default/objects/Account/fields/AccountBackfillNotes__c.field-meta.xml
<CustomField>
    <fullName>AccountBackfillNotes__c</fullName>
    <label>AccountBackfillNotes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>