force-app/main/default/objects/Account/fields/accountBuyingStage6sense__c.field-meta.xml
<CustomField>
    <fullName>accountBuyingStage6sense__c</fullName>
    <description>The categorical representation of the measure of how much an account is behaving like accounts with which there is a history of previously opened opportunities. Target:Awareness:Consideration:Decision:Purchase</description>
    <label>6sense Account Buying Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>