force-app/main/default/objects/Account/fields/accountNumericalReachScore6sense__c.field-meta.xml
<CustomField>
    <fullName>accountNumericalReachScore6sense__c</fullName>
    <label>6sense Account Numerical Reach Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>