force-app/main/default/objects/Account/fields/accountProfileScore6sense__c.field-meta.xml
<CustomField>
    <fullName>accountProfileScore6sense__c</fullName>
    <description>A measure of how similar a company is to the ideal customer profile. Firmographic and technographic factors of an account, along with historical opportunity history, are used by data science models to create this measure.</description>
    <label>6sense Account Profile Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>