force-app/main/default/objects/Account/fields/Acquisition_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to denote the Acquisition Campaign that nudged a Prospective Partner to apply to become a Partner</description>
    <label>Acquisition Campaign</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Campaign.Type</field>
            <operation>equals</operation>
            <value>Partner Acquisition</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Partner Accounts (Partner Acquisition Campaigns)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>