force-app/main/default/objects/Account/fields/Active_Profiles_Output_Percent__c.field-meta.xml
<CustomField>
    <fullName>Active_Profiles_Output_Percent__c</fullName>
    <description>SFDC 3974</description>
    <formula>Klaviyo_Product_Usage__r.Active_Profiles_Output_Percent__c</formula>
    <inlineHelpText>Active ProfilesOutput from the Klaviyo Product Usage</inlineHelpText>
    <label>Active Profiles Output Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>