force-app/main/default/objects/Account/fields/Actual_MRR_Attributed__c.field-meta.xml
<CustomField>
    <fullName>Actual_MRR_Attributed__c</fullName>
    <description>Actual MRR this partner has referred. Excludes Promotional values.</description>
    <inlineHelpText>Actual MRR this partner has referred. Excludes Promotional values.</inlineHelpText>
    <label>Actual MRR Attributed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>