force-app/main/default/objects/Account/fields/AE_DNS_Records_Properly_Set_Up__c.field-meta.xml
<CustomField>
    <fullName>AE_DNS_Records_Properly_Set_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked by the AE if the customer has DNS records properly set up</inlineHelpText>
    <label>AE: DNS Records Properly Set Up</label>
    <type>Checkbox</type>
</CustomField>