force-app/main/default/objects/Account/fields/AE_of_Record_Assignment__c.field-meta.xml
<CustomField>
    <fullName>AE_of_Record_Assignment__c</fullName>
    <label>AE of Record Assignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shopify</fullName>
            </value>
            <value>
                <fullName>Non-Shopify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>