force-app/main/default/objects/Account/fields/AE_Uploaded_Suppression_List__c.field-meta.xml
<CustomField>
    <fullName>AE_Uploaded_Suppression_List__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checkbox for AE - Indicates if customer has uploaded their suppression list (if one exists)</inlineHelpText>
    <label>Uploaded Suppression List</label>
    <type>Checkbox</type>
</CustomField>