force-app/main/default/objects/Account/fields/Agency_CSM__c.field-meta.xml
<CustomField>
    <fullName>Agency_CSM__c</fullName>
    <description>For automation use only</description>
    <formula>CASESAFEID(Experts_Partner_Account__r.SUPPORT_Account_Manager__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency CSM</label>
    <type>Text</type>
</CustomField>