force-app/main/default/objects/Account/fields/Agency_Employee_Count__c.field-meta.xml
<CustomField>
    <fullName>Agency_Employee_Count__c</fullName>
    <label>Agency Employee Count</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agency_Employee_Count</valueSetName>
    </valueSet>
</CustomField>