force-app/main/default/objects/Account/fields/Agency_Flip_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Agency_Flip_Date_Time__c</fullName>
    <label>Partner Flip Date/Time</label>
    <type>DateTime</type>
</CustomField>