force-app/main/default/objects/Account/fields/Agency_Flip_Owner__c.field-meta.xml
<CustomField>
    <fullName>Agency_Flip_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Flip Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>