force-app/main/default/objects/Account/fields/Agency_Office_Location__c.field-meta.xml
<CustomField>
    <fullName>Agency_Office_Location__c</fullName>
    <description>How many office locations does the agency have (application question)</description>
    <inlineHelpText>How many office locations does the agency have (application question)</inlineHelpText>
    <label># of Partner Office Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3 to 5</fullName>
            </value>
            <value>
                <fullName>5+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>