force-app/main/default/objects/Account/fields/Agency_Terms_Submission__c.field-meta.xml
<CustomField>
    <fullName>Agency_Terms_Submission__c</fullName>
    <label>Agency Terms Submission</label>
    <type>DateTime</type>
</CustomField>