force-app/main/default/objects/Account/fields/Aggregate_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Annual_Revenue__c</fullName>
    <label>Aggregate Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>