force-app/main/default/objects/Account/fields/Alexa_Rank_at_Last_Owner_Change__c.field-meta.xml
<CustomField>
    <fullName>Alexa_Rank_at_Last_Owner_Change__c</fullName>
    <label>Alexa Rank at Last Owner Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>