force-app/main/default/objects/Account/fields/Alexa_Rank_Last_Refresh__c.field-meta.xml
<CustomField>
    <fullName>Alexa_Rank_Last_Refresh__c</fullName>
    <label>Alexa Rank Last Refresh</label>
    <type>DateTime</type>
</CustomField>