force-app/main/default/objects/Account/fields/Aligned_Partner_Growth_AE__c.field-meta.xml
<CustomField>
    <fullName>Aligned_Partner_Growth_AE__c</fullName>
    <description>Aligned Partner Growth AE</description>
    <formula>RP_Referral_Partner_Account__r.Partner_Growth_AE__r.FirstName + &quot; &quot; + RP_Referral_Partner_Account__r.Partner_Growth_AE__r.LastName</formula>
    <inlineHelpText>Aligned Partner Growth AE</inlineHelpText>
    <label>Aligned Partner Growth AE</label>
    <type>Text</type>
</CustomField>