force-app/main/default/objects/Account/fields/AM_Account_Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>AM_Account_Status_Notes__c</fullName>
    <description>Account Management field to help classify the &quot;health&quot; of accounts. Used by Account Managers.</description>
    <inlineHelpText>Account Management field to help classify the &quot;health&quot; of accounts. Used by Account Managers.</inlineHelpText>
    <label>Account Status Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>