force-app/main/default/objects/Account/fields/Assigned_Account__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Account__c</fullName>
    <description>SFDC 4201 Sales Segmentation</description>
    <label>Assigned Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Named Account (AE)</fullName>
            </value>
            <value>
                <fullName>Temporary Named Account (AE)</fullName>
            </value>
            <value>
                <fullName>CG AMER ENTR 1</fullName>
            </value>
            <value>
                <fullName>CG AMER ENTR 2</fullName>
            </value>
            <value>
                <fullName>CG AMER ENTR 3</fullName>
            </value>
            <value>
                <fullName>CG AMER ENTR 4</fullName>
            </value>
            <value>
                <fullName>CG AMER ENTR 5</fullName>
            </value>
            <value>
                <fullName>CG AMER ENTR 6</fullName>
            </value>
            <value>
                <fullName>CG AMER ENTR 7</fullName>
            </value>
            <value>
                <fullName>CG AMER ENTR 8</fullName>
            </value>
            <value>
                <fullName>CG AMER SMB 1</fullName>
            </value>
            <value>
                <fullName>CG AMER SMB 2</fullName>
            </value>
            <value>
                <fullName>CG AMER SMB 3</fullName>
            </value>
            <value>
                <fullName>CG AMER SMB 4</fullName>
            </value>
            <value>
                <fullName>CG AMER SMB 5</fullName>
            </value>
            <value>
                <fullName>CG AMER SMB 6</fullName>
            </value>
            <value>
                <fullName>CG AMER SMB 7</fullName>
            </value>
            <value>
                <fullName>CG AMER SMB 8</fullName>
            </value>
            <value>
                <fullName>CG AMER SMB 9</fullName>
            </value>
            <value>
                <fullName>CG AMER SMB 10</fullName>
            </value>
            <value>
                <fullName>CG AMER SMB 11</fullName>
            </value>
            <value>
                <fullName>CG AMER SMB 12</fullName>
            </value>
            <value>
                <fullName>CG AMER SMB 13</fullName>
            </value>
            <value>
                <fullName>CG AMER SMB 14</fullName>
            </value>
            <value>
                <fullName>CG AMER SMB 15</fullName>
            </value>
            <value>
                <fullName>CG AMER SMB 16</fullName>
            </value>
            <value>
                <fullName>CG AMER SMB 17</fullName>
            </value>
            <value>
                <fullName>CG AMER SMB 18</fullName>
            </value>
            <value>
                <fullName>CG AMER SMB 19</fullName>
            </value>
            <value>
                <fullName>CG AMER SMB 20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>