force-app/main/default/objects/Account/fields/Assigned_SA_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_SA_Name__c</fullName>
    <formula>Assigned_Sales_Engineer__r.FirstName &amp; &quot; &quot; &amp; Assigned_Sales_Engineer__r.LastName</formula>
    <label>Assigned SA Name</label>
    <type>Text</type>
</CustomField>