force-app/main/default/objects/Account/fields/Assigned_Sales_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Sales_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Solution Architect</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>