force-app/main/default/objects/Account/fields/Assignment_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Picklist__c</fullName>
    <label>Assignment Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assign aBDR</fullName>
            </value>
            <value>
                <fullName>90 Day BDR Assignment</fullName>
            </value>
            <value>
                <fullName>Assign SA</fullName>
            </value>
            <value>
                <fullName>Assign CSM</fullName>
            </value>
            <value>
                <fullName>GMV Alignment</fullName>
            </value>
            <value>
                <fullName>Customer Growth Routing</fullName>
            </value>
            <value>
                <fullName>L SMB Assignment</fullName>
            </value>
            <value>
                <fullName>Entrepreneur CG Assignment</fullName>
            </value>
            <value>
                <fullName>Mid Market CG Assignment</fullName>
            </value>
            <value>
                <fullName>SMB CG Assignment</fullName>
            </value>
            <value>
                <fullName>No Customer Segment CG Assignment</fullName>
            </value>
            <value>
                <fullName>Assign cCSM</fullName>
                <isActive>false</isActive>
                <label>Assign cCSM</label>
            </value>
            <value>
                <fullName>Strategic Partner Alignment</fullName>
                <isActive>false</isActive>
                <label>Strategic Partner Alignment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>