force-app/main/default/objects/Account/fields/Associated_Klaviyo_Account_IDs__c.field-meta.xml
<CustomField>
    <fullName>Associated_Klaviyo_Account_IDs__c</fullName>
    <description>Holds all the KIDs which the Account is Associated with</description>
    <inlineHelpText>Holds all the KIDs which the Account is Associated with</inlineHelpText>
    <label>Associated Klaviyo Account IDs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>