force-app/main/default/objects/Account/fields/Authorization_Short_Code_Date_Signed__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Short_Code_Date_Signed__c</fullName>
    <label>Authorization Short Code Date Signed</label>
    <type>Date</type>
</CustomField>