force-app/main/default/objects/Account/fields/Average_Charm_Revenue_of_Child_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Average_Charm_Revenue_of_Child_Accounts__c</fullName>
    <description>Charm revenue average over all child accounts in account hierarchy
SFDC-524</description>
    <inlineHelpText>Charm revenue average over all child accounts in account hierarchy</inlineHelpText>
    <label>Average Charm Revenue of Child Accounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>