force-app/main/default/objects/Account/fields/BackfillField__c.field-meta.xml
<CustomField>
    <fullName>BackfillField__c</fullName>
    <description>Just used to run automation to perform ad hoc backfills. Built originally for Partner Tier backfills.</description>
    <inlineHelpText>Just used to run automation to perform ad hoc backfills. Built originally for Partner Tier backfills.</inlineHelpText>
    <label>BackfillField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>