force-app/main/default/objects/Account/fields/Bank_Postal_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_Postal_Zip_Code__c</fullName>
    <label>Bank Postal/Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>