force-app/main/default/objects/Account/fields/Became_Customer_Date__c.field-meta.xml
<CustomField>
    <fullName>Became_Customer_Date__c</fullName>
    <inlineHelpText>The Close Date of the first Closed Won Opportunity of the Type &quot;Land: New Account&quot;</inlineHelpText>
    <label>Initial Became Customer Date</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.New__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Opportunity_Product__c</field>
        <operation>notEqual</operation>
        <value>Complimentary Long Number Subscription</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>