force-app/main/default/objects/Account/fields/Became_K1_Customer_Date__c.field-meta.xml
<CustomField>
    <fullName>Became_K1_Customer_Date__c</fullName>
    <description>Date became a K1 Customer</description>
    <label>Became K1 Customer Date</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Concatenated_Net_New_Opportunity_Product__c</field>
        <operation>contains</operation>
        <value>Klaviyo One</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>