force-app/main/default/objects/Account/fields/Became_Reviews_Customer_Date__c.field-meta.xml
<CustomField>
    <fullName>Became_Reviews_Customer_Date__c</fullName>
    <description>SFDC-1346. Days since the most recent closed won Additional Product Reviews opportunity.</description>
    <inlineHelpText>SFDC-1346. Days since the most recent closed won Additional Product Reviews opportunity.</inlineHelpText>
    <label>Became Reviews Customer Date</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Concatenated_Net_New_Opportunity_Product__c</field>
        <operation>contains</operation>
        <value>Klaviyo Reviews</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>