force-app/main/default/objects/Account/fields/Became_SMS_Customer_Date__c.field-meta.xml
<CustomField>
    <fullName>Became_SMS_Customer_Date__c</fullName>
    <label>Became SMS Customer Date</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Concatenated_Net_New_Opportunity_Product__c</field>
        <operation>contains</operation>
        <value>Klaviyo SMS, SMS Subscription</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>