force-app/main/default/objects/Account/fields/BI_Country__c.field-meta.xml
<CustomField>
    <fullName>BI_Country__c</fullName>
    <label>BI Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>