force-app/main/default/objects/Account/fields/BI_Enrichment_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>BI_Enrichment_Sync_Status__c</fullName>
    <description>SFDC-3629 Flag for error recovery related to BI enrichment</description>
    <label>BI Enrichment Sync Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success - segment</fullName>
            </value>
            <value>
                <fullName>Failed - segment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>