force-app/main/default/objects/Account/fields/BI_Enrichment_Synced__c.field-meta.xml
<CustomField>
    <fullName>BI_Enrichment_Synced__c</fullName>
    <description>Datetime stamp indicates when the record is synced from Salesforce to BI model for enrichment</description>
    <inlineHelpText>Datetime stamp indicates when the record is synced from Salesforce to BI model for enrichment</inlineHelpText>
    <label>BI Enrichment Synced</label>
    <type>DateTime</type>
</CustomField>