force-app/main/default/objects/Account/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <inlineHelpText>Set by the user in the welcome wizard.</inlineHelpText>
    <label>(Automation Use) Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Type</valueSetName>
    </valueSet>
</CustomField>