force-app/main/default/objects/Account/fields/Business_Type_Algorithm__c.field-meta.xml
<CustomField>
    <fullName>Business_Type_Algorithm__c</fullName>
    <inlineHelpText>Set by Klaviyo code or human.</inlineHelpText>
    <label>Business Type (Klaviyo / Algorithm)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Type</valueSetName>
    </valueSet>
</CustomField>