force-app/main/default/objects/Account/fields/Calculated_Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Last_Activity_Date__c</fullName>
    <formula>IF(

AND(
 NOT( ISBLANK( LastActivityDate )),
 NOT( ISBLANK( Last_Activity_Date_Custom__c )),
Last_Activity_Date_Custom__c &gt;= LastActivityDate
),

Last_Activity_Date_Custom__c, 

IF(

AND(
 NOT( ISBLANK( LastActivityDate )),
 NOT( ISBLANK( Last_Activity_Date_Custom__c )),
LastActivityDate &gt; Last_Activity_Date_Custom__c
),

LastActivityDate,

IF(

 NOT( ISBLANK( LastActivityDate )),

LastActivityDate,

IF(

 NOT( ISBLANK( Last_Activity_Date_Custom__c )),

Last_Activity_Date_Custom__c,

NULL

)

)

)

)</formula>
    <label>Calculated Last Activity Date</label>
    <type>Date</type>
</CustomField>